finish pole entity

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,3 +1,8 @@
+[entity-name]
+transport-belt-power=Powered transport belt
+fast_transport_belt_power=Powered fast transport belt
+express-transport-belt-power=Powered express transport belt
+
 [item-name]
 transport-belt-power=Powered transport belt
 fast_transport_belt_power=Powered fast transport belt
